# EGGIN

./: .gitmodules  CMakeLists.txt  EGGIN.cmake  Makefile  README.md  start.sh
example/: CMakeLists.txt  FreeCam.hpp  Makefile  main.cpp
examples/room/: GAME  Makefile  main.cpp
src/: console.cpp  console.h  host.cpp  host.h  input.cpp  scenes.cpp  scenes.h
src/core/: Core.cmake  ECmd.cpp  ECmd.hpp  EConsole.cpp  EConsole.hpp  ECvarSystem.cpp  ECvarSystem.hpp  EGGIN.cpp  EGGIN.hpp  common.h  host.h  input.cpp  input.h  scenes.h
src/net/: net.cpp  socket.cpp  socket.h
src/render/: Camera.cpp  Camera.h  draw.cpp  draw.h  frustum.cpp  frustum.h  render.cpp  render.h
src/render/imgui/: togl.cpp
src/systems/Render/: CLight.cpp  CLight.hpp  CMeshRenderer.cpp  CMeshRenderer.hpp  ERender.cpp  ERender.hpp  ERenderFlags.hpp  ERenderLight.cpp  ERenderLight.hpp  ERenderMesh.cpp  ERenderMesh.hpp  Render.cmake
src/systems/net/: net.cpp  net.h  socket.cpp
src/systems/objects/: GameObject.hpp
src/utils/: ByteBuffer.hpp  lock.h  nextlist.hpp  speedlist.hpp  vec3.h
